--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "server",
+  "name": "ecommerceApi",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rahulyadav1986/ecommerceApi.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "bugs": {
+    "url": "https://github.com/rahulyadav1986/ecommerceApi/issues"
+  },
+  "homepage": "https://rahulyadav1986/ecommerceApi#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "json-server": "^1.0.0-beta.1"
+    "json-server": "^1.0.0-beta.1",
+    "json-serve": "^0.1.0"
   }
 }
